# Choreo-Protobuf

./: .gitignore  Cargo.toml  Cargo.toml.rs.tpl  buf.gen.yaml  buf.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/frontend/: package.json
apps/frontend/src/: App.tsx  client.ts
proto/: generate.sh
proto/entity/: differential_sample.proto  drive_type.proto  expression.proto  project_file.proto  swerve_sample.proto  trajectory.proto  trajectory_file.proto
proto/entity/param_template/: __file__.protmpl  expression.protmpl  waypoint_id.protmpl
proto/service/: service.proto
proto/service/commands/: echo_swerve_sample.proto  generate.proto  (+1 more)
proto_js/: package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts
proto_js/src/: index.entity.ts  index.service.commands.ts  index.ts
proto_rs/: Cargo.toml  expand.rs
proto_rs/src/: lib.rs
required_proc/: Cargo.toml
required_proc/src/: lib.rs  required.rs  utils.rs
required_proc/tests/: mod.rs
rs/generation/: Cargo.toml
rs/proto_rs/: Cargo.toml  expand.rs
rs/rs_client_example/: Cargo.toml
rs/server_example/: Cargo.toml
rs/server_example/src/: main.rs
rs/todouble_derive/: Cargo.toml
rs/valid_proc/: Cargo.toml
rs_client_example/: Cargo.toml
rs_client_example/src/: main.rs
server_example/: Cargo.toml
server_example/src/: main.rs
trajoptlib/: .clang-format  .clang-tidy  LICENSE.txt  TrajoptLibConfig.cmake.in
trajoptlib/docs/: Doxyfile  footer.html  header.html
trajoptlib/examples/: differential.rs  swerve.rs
web_client_example/: index.ts  package.json  pnpm-lock.yaml
(+55 files in other folders)
