[package]
name = "server_example"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.14.2"
prost = "0.14"
tonic-prost = "*"
proto_rs = { version = "0.1.0", path = "../proto_rs"}
tokio = "1.49.0"
tonic-web = "0.14.2"
tower-http = {version = "0.6.8", features = ["cors"]}
pbjson-types = "0.9.0"
macro_rules_attribute = "0.2.2"
utility-types = "0.0.4"
